--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,9 @@ body {
 
   /* Clicks go through Body to Canvas */
   pointer-events: none;
+  
+  /* Fix for mobile blue flicker/highlight */
+  -webkit-tap-highlight-color: transparent;
 }
 
 h1, h2, h3 {
@@ -66,6 +69,7 @@ button {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 a:link {
